tests/147_init_list_error.err
pirxc compilation failed: exit status 1
Output: tests/147_init_list_error.pirx:8:18: initializer lists are not supported
tests/147_init_list_error.pirx:8:3: cannot initialize variable p of type Point with expression of type undefined
Error: exit status 1
